# Proyecto-Progra3

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  MovieData.h  README.md  csvHandle.cpp  csvHandle.h  main.cpp  treeHandle.cpp  treeHandle.h
data/: users.txt  usuarios.txt
include/: authentication.h  movie.h  movie_database.h  recommendation_system.h  search_engine.h  trie.h  user.h
src/: authentication.cpp  main.cpp  movie.cpp  movie_database.cpp  recommendation_system.cpp  search_engine.cpp  trie.cpp  user.cpp
